Possibilitando o modo responsivo ao portifólio

--- a/meu-curriculo-02/index.html
+++ b/meu-curriculo-02/index.html
@@ -49,12 +49,12 @@
                     <div class="col-xxl-5">
                         <!-- Header text content-->
                         <div class="text-center text-xxl-start">
-                            <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
-                                <div class="text-uppercase">Programador &middot; Desenvolvedor front-end &middot; Banco
-                                    de Dados</div>
+                            <div class="badge bg-gradient-primary-to-secondary text-white mb-2 ">
+                                <div class="text-uppercase wrap">Front-End &middot; DevOps &middot; JavaScript</div>
                             </div>
-                            <div class="fs-3 fw-light text-muted"> Posso ajudar sua empresa a</div>
-                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Desenvolver sites,
+                            <div class="fs-3 fw-light text-muted"> Posso ajudar sua empresa à</div>
+                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline ">
+                                Desenvolvedor sites,
                                     análise técnica e desenvolver layouts.</span></h1>
                             <div
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
@@ -370,14 +370,9 @@
                                             <p class="lead fw-light mb-4 text-">Meu nome é Luis Henrique sou técnico em
                                                 desenvolvimento de sistema junior.</p>
                                             <p class="text-muted">Sou estudante do ensino médio, cursando em técnico em
-                                                informática. Estou desenvolvendo um projeto empreendedor chamado de
-                                                Embalaqui, esse projeto tem como objetivo principal circular mercadorias
+                                                informática. Participei de um projeto desenvolvedor chamado Embalaqui, esse projeto tem como objetivo principal circular mercadorias
                                                 reutilizaveis na sociedade por meia de vendas,propagandas de doações, e
-                                                por meio da logística que facilita a locomoção do máterial.Contudo todas
-                                                as quartas-feiras apartir 14h estou na escola desenvolvendo o projeto
-                                                Embalaqui. No entanto, pretendo fazer estágio remunerado ou não
-                                                remunerado com cargas horarias apartir das 13h30 de quinta-feira à
-                                                sábado. De preferência estágio na área da informática.</p>
+                                                por meio da logística que facilita a locomoção do máterial.</p>
                                             <div class="d-flex justify-content-center fs-2 gap-4">
                                                 <a class="text-gradient"
                                                     href="https://www.linkedin.com/in/luis-henrique-ferreira-souza-274a73253/"><i
