--- a/meu-curriculo-02/resume.html
+++ b/meu-curriculo-02/resume.html
@@ -42,7 +42,7 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Experience Section-->
                         <section>
-                            <div class="d-flex align-items-center justify-content-between mb-4">
+                            <div class="text-center mb-4">
                                 <h2 class="text-primary fw-bolder mb-0">Experiências</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
@@ -140,13 +140,18 @@
                                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-tools"></i></div>
                                             <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Habilidades Proficionais</span></h3>
                                         </div>
-                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                        <div class="row row-cols-1 row-cols-md-3">
                                             
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Desenvolvimento Web</div></div>
+                                            <div class="col mb-2">
+                                                <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Desenvolvimento Web</div>
+                                            </div>
+                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Banco de Dados</div></div>
+                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Bootstrap</div></div>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Banco de Dados</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Bootstrap</div></div>
+                                           
+
+                                        </div>    
                                         </div>
                                     </div>
                                     <!-- Languages list-->
