--- a/meu-curriculo-02/resume.html
+++ b/meu-curriculo-02/resume.html
@@ -140,15 +140,25 @@
                                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-tools"></i></div>
                                             <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Habilidades Proficionais</span></h3>
                                         </div>
-                                        <div class="row row-cols-1 row-cols-md-3">
+                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
                                             
-                                            <div class="col mb-2">
+                                            <div class="col mb-4 mb-md-0">
                                                 <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Desenvolvimento Web</div>
                                             </div>
-                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Banco de Dados</div></div>
-                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Bootstrap</div></div>
+                                             <div class="col mb-4 mb-md-0">
+                                                <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Banco de Dados</div>
+                                            </div>
+                                             <div class="col mb-4 mb-md-0">
+                                                <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Bootstrap</div>
+                                            </div>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3">
+                                            <div class="col mb-4 mb-md-0">
+                                                <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Git</div>
+                                            </div>
+                                            <div class="col mb-4 mb-md-0">
+                                                <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">GitHub</div>
+                                            </div>
                                            
 
                                         </div>    
@@ -161,7 +171,9 @@
                                             <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Linguagens</span></h3>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">HTML</div></div>
+                                            <div class="col mb-4 mb-md-0">
+                                                <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">HTML</div>
+                                            </div>
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">CSS</div></div>
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">JavaScript</div></div>
                                         </div>
