Algumas mudanças adicionais

--- a/meu-curriculo-02/index.html
+++ b/meu-curriculo-02/index.html
@@ -25,13 +25,21 @@
 <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light py-3" class="menuAlt">
-            <div class="container px-5">
-                <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Meu portfólio</span></a>
-                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation"><span
-                        class="navbar-toggler-icon"></span></button>
+        <nav class="navbar navbar-expand-lg navbar-light  py-3 bg-transparent" class="menuAlt">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="assets/foto_portfolio_transp02.png" alt="Foto Perfil"><span class="text-primary">Luis Henrique Ferreira Souza</span>
+                </a>
+                <button 
+                    class="navbar-toggler shadow-none border-0" 
+                    type="button" 
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" 
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false" 
+                    aria-label="Toggle navigation"><span
+                        class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
@@ -42,6 +50,7 @@
                 </div>
             </div>
         </nav>
+        <hr>
         <!-- Header-->
         <header class="py-5">
             <div class="container px-5 pb-5">
@@ -370,9 +379,7 @@
                                             <p class="lead fw-light mb-4 text-">Meu nome é Luis Henrique sou técnico em
                                                 desenvolvimento de sistema junior.</p>
                                             <p class="text-muted">Sou estudante do ensino médio, cursando em técnico em
-                                                informática. Participei de um projeto desenvolvedor chamado Embalaqui, esse projeto tem como objetivo principal circular mercadorias
-                                                reutilizaveis na sociedade por meia de vendas,propagandas de doações, e
-                                                por meio da logística que facilita a locomoção do máterial.</p>
+                                                informática. Participei de um projeto desenvolvedor chamado Embalaqui. Fiz 80horas de curso de Html5 e CSS3 do canal curso em video. Fiz um curso de JavaScript usando a biblioteca p5.js com a Byju's Future School, criando jogos onlines que podem ser acessivél a qualquer dispositivo, recebendo certificado de conclusão de curso e certificado de participação.</p>
                                             <div class="d-flex justify-content-center fs-2 gap-4">
                                                 <a class="text-gradient"
                                                     href="https://www.linkedin.com/in/luis-henrique-ferreira-souza-274a73253/"><i
@@ -391,8 +398,9 @@
             </div>
         </header>
     </main>
+    <hr>
     <!-- Footer-->
-    <footer class="bg-white py-4 mt-auto">
+    <footer class="bg-transparent  py-4 mt-auto">
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                 <div class="col-auto">
