--- a/meu-curriculo-02/resume.html
+++ b/meu-curriculo-02/resume.html
@@ -22,8 +22,18 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Meu portfólio</span></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Luis Henrique - Dev</span></a>
+                    <!--Btn do Navigation -->
+                <button 
+                class="navbar-toggler shadow-none border-0" 
+                type="button" 
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" 
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false" 
+                aria-label="Toggle navigation"><span
+                    class="navbar-toggler-icon"></span>
+                </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
@@ -148,7 +158,7 @@
                                              <div class="col mb-4 mb-md-0">
                                                 <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Banco de Dados</div>
                                             </div>
-                                             <div class="col mb-4 mb-md-0">
+                                             <div class="col">
                                                 <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Bootstrap</div>
                                             </div>
                                         </div>
