Vamos a mais uma atualização

--- a/meu-curriculo-02/index.html
+++ b/meu-curriculo-02/index.html
@@ -26,10 +26,8 @@
     <main class="flex-shrink-0">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light  py-3 bg-transparent" class="menuAlt">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="assets/foto_portfolio_transp02.png" alt="Foto Perfil"><span class="text-primary">Luis Henrique Ferreira Souza</span>
-                </a>
+            <div class="container px-5">
+                <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Luis Henrique - Dev</span></a>
                 <button 
                     class="navbar-toggler shadow-none border-0" 
                     type="button" 
@@ -61,7 +59,7 @@
                             <div class="badge bg-gradient-primary-to-secondary text-white mb-2 ">
                                 <div class="text-uppercase wrap">Front-End &middot; DevOps &middot; JavaScript</div>
                             </div>
-                            <div class="fs-3 fw-light text-muted"> Posso ajudar sua empresa à</div>
+                            <div class="fs-3 fw-light "> Posso ajudar sua empresa à</div>
                             <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline ">
                                 Desenvolvedor sites,
                                     análise técnica e desenvolver layouts.</span></h1>
