--- a/meu-curriculo-02/index.html
+++ b/meu-curriculo-02/index.html
@@ -374,7 +374,7 @@
                                         <div class="text-center my-5">
                                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Sobre
                                                     mim</span></h2>
-                                            <p class="lead fw-light mb-4 text-">Meu nome é Luis Henrique sou técnico em
+                                            <p class="lead fw-light mb-4 text-"> Me chamo Luis Henrique e sou técnico em
                                                 desenvolvimento de sistema junior.</p>
                                             <p class="text-muted">Sou estudante do ensino médio, cursando em técnico em
                                                 informática. Participei de um projeto desenvolvedor chamado Embalaqui. Fiz 80horas de curso de Html5 e CSS3 do canal curso em video. Fiz um curso de JavaScript usando a biblioteca p5.js com a Byju's Future School, criando jogos onlines que podem ser acessivél a qualquer dispositivo, recebendo certificado de conclusão de curso e certificado de participação.</p>
