Uma grande modança no código

--- a/meu-curriculo-02/index.html
+++ b/meu-curriculo-02/index.html
@@ -25,7 +25,7 @@
 <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light  py-3 bg-transparent" class="menuAlt">
+        <nav class="navbar navbar-expand-lg navbar-light navbar-white  py-3 bg-transparent">
             <div class="container px-5">
                 <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Luis Henrique - Dev</span></a>
                 <button 
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </nav>
-        <hr>
+     
         <!-- Header-->
         <header class="py-5">
             <div class="container px-5 pb-5">
