--- a/meu-curriculo-02/projects.html
+++ b/meu-curriculo-02/projects.html
@@ -25,7 +25,7 @@
 <body class="d-flex flex-column h-100 bg-light">
     <main class="flex-shrink-0">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 bg-transparent">
             <div class="container px-5">
                 <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Luis Henrique - Dev</span></a>
                 <!--Btn do Navigation -->
