--- a/meu-curriculo-02/resume.html
+++ b/meu-curriculo-02/resume.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Portfólio-Luis Henrique</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -86,7 +86,26 @@
                                             <div class="small">Barra do Garças, MT</div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-8"><div>Eu aprendi a desenvolver sites em html e CSS, atribuindo tags,  métados, parâmentros, fontes, icones e animações. Contudo, eu aprendi os conceitos básicos de React.   </div></div>
+                                    <div class="col-lg-8"><div>Eu aprendi a desenvolver sites em html e CSS, atribuindo tags,  métados, parâmentros, fontes, ícones e animações.</div></div>
+                                </div>
+                            </div>
+                        </div>
+                      <!------------- Experience Card 3 --------------------->  
+                        <div class="card shadow border-0 rounded-4 mb-5">
+                            <div class="card-body p-5">
+                                <div class="row align-items-center gx-5">
+                                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                        <div class="  shadow  border-0 bg-light p-4 rounded-4">
+                                            <div class="text-primary fw-bolder mb-2">2023 - atualmente</div>
+                                            <div class="small fw-bolder">React JS</div>
+                                            <div class="small"> Matheus Battisti - Hora de Codar e freeCodeCamp.org                                           </div>
+                                            <div class="small">Canais do Youtube </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-8"><div> Com base nesses cursos do Youtube aprendi a trabalhar com React do básico ao intermediário incluindo blibiotecas como Tailwindcss, ViteJS, React App e Node.JS. No decorrer desse curso, aprendi a trabalhar melhor com o Git, Github e o Github Desktop onde eu pode hospedar a maioria dos meus projetos em repositórios, e este portifólio é um grande exemplo disso!
+
+                                    </div>
+                                </div> 
                                 </div>
                             </div>
                         </div>
@@ -178,7 +197,7 @@
                                     </div>    
                                     </div>
                                 </div>
-                <!-------------------- Languages list ------------------------------------------->
+                <!-------------------------- Languages list ---------------------------------------->
                                 <div class="mb-5">
                                     <div class="card-body p-5">
                                         <div class="d-flex align-items-center mb-4">
